--- a/ch01a.html
+++ b/ch01a.html
@@ -42,10 +42,12 @@
             <h2>Answers</h2>
 
             <p><b>1. The correct answer is D.</b><br /> As a <code>final</code> attribute, <code>a</code> is required to have been initialized, so compilation fails on the line marked as <code>// 3</code>.</p>
+<font size="2" color="blue"><b>1. 答案是D。</b><br />a作为<code>final</code>属性必须被初始化，因此在标记为<code>// 3</code>的行上编译失败。</font><br />
 
             <p><br /></p>
 
             <p><b>2. The correct answer is D.</b><br /> Private is the most restrictive of all access modifiers. <code>public</code> is the least restrictive of all.</p>
+<font size="2" color="blue"><b>2. 答案是D。</b><br />Private是所有修饰符中最严格限制。<code>public</code>是所有修饰符中限制最少的。</font><br />
 
             <p>Between default and <code>protected</code>, the latter is less restrictive since even if a subclass belongs to another package than the superclass, it can access protected members, in contrast to the default access (which has a same-package only level).</p>
 
