--- a/ch01.html
+++ b/ch01.html
@@ -23,7 +23,9 @@
         <div class="title-container">
             <div class="chapter-title">
                 <h1><i class="chapter">Part ONE</i><br />
-			  Class Design</h1>
+			  Class Design<br />
+<font size="2" color="blue">第一章<br />类的设计</font>
+                </h1>
 
                 <h1><i style="text-align: center;">Chapter ONE</i><br />
 			  Encapsulation and Immutable Classes</h1>
