--- a/ch03a.html
+++ b/ch03a.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -9,7 +9,7 @@
     <link href="css/code.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
 
     <script src="js/common-sections.js"></script>
 </head>
@@ -20,7 +20,9 @@
             <div class="chapter-title">
 
                 <h1><i class="chapter">Chapter THREE</i><br />
-				Inner Classes</h1>
+				Inner Classes<br />
+<font size="2" color="blue">第三章<br />内部类</font>
+                </h1>
 
                 <p><br /></p>
 
@@ -40,6 +42,7 @@
             <h2>Answers</h2>
 
             <p><b>1. The correct answer is C.</b><br /> There's nothing wrong with the <code>ITest</code> interface; you can declare inner interfaces without problems. What is wrong is that the declaration of the anonymous class is missing the closing semicolon.</p>
+<font size="2" color="blue">１．正确答案是C。<br />声明<code>ITest</code>接口没有问题；声明内部接口是被允许的。错误在于匿名类的声明尾部缺少分号。</font>
 
             <p>Remember, the declaration of an anonymous class is a Java expression, like declaring an <code>int</code> variable, so it has to end with a semicolon after the curly brace.</p>
 
@@ -90,6 +93,7 @@
             <p><b><br /></b></p>
 
             <p><b>7. The correct answer is C.</b><br /> Local classes cannot have access modifiers. The only allowed modifiers are <code>abstract</code> and <code>final</code>.</p>
+<font size="2" color="blue">７．正确答案是C。<br />局部类不能使用除了<code>abstract</code>和<code>final</code>以外的修饰符</font>
 
             <p><b><br /></b></p>
 
