--- a/ch05.html
+++ b/ch05.html
@@ -75,7 +75,7 @@
 
             <p>Of course, we can implement some checks, but this just makes the problem more complicated. Luckily, enumerations (or enums for short) provide a nice solution to this issue.</p>
 
-<font size="2" color="blue">当然，我们也可以对其进行校验，但这只会使问题更加复杂化。但幸运的是，枚举（enumerations或enums）可以很好地解决这个问题。</font>
+<font size="2" color="blue">当然，我们也可以对其进行校验，但这只会使问题更加复杂化。幸运的是，枚举（enumerations或enums）可以很好地解决这个问题。</font>
 
             <p>An <i>enum</i> is a type (like a class or an interface) that represents a <b>FIXED</b> list of values (you can think of these as constants).</p>
 <font size="2" color="blue">枚举（<i>enum</i>）与类（class）或接口（interface）相同，是一种类型，可以将其理解为一个拥有<b>固定</b>的值列表（也可以认为是拥有常量的列表）。</font>
