--- a/ch01.html
+++ b/ch01.html
@@ -24,11 +24,13 @@
             <div class="chapter-title">
                 <h1><i class="chapter">Part ONE</i><br />
 			  Class Design<br />
-<font size="2" color="blue">第一章<br />类的设计</font>
+<font size="2" color="blue">第一部分<br />类的设计</font>
                 </h1>
 
                 <h1><i style="text-align: center;">Chapter ONE</i><br />
-			  Encapsulation and Immutable Classes</h1>
+			  Encapsulation and Immutable Classes<br />
+<font size="2" color="blue">第一章<br />封装与不可变类</font>
+                </h1>
 
                 <h3 style="text-align: center;"><i>Exam Objectives</i></h3>
 <p style="text-align: center;"><i><font size="2" color="blue">考点</font></i></p>
