--- a/ch06.html
+++ b/ch06.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -10,7 +10,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
 
     <script src="js/common-sections.js"></script>
 </head>
@@ -24,18 +24,23 @@
             <div class="chapter-title">
 
                 <h1><i class="chapter">Part TWO</i><br />
-				Generics and Collections</h1>
-
-
+				Generics and Collections<br />
+<font size="2" color="blue">第二部分<br />泛型与容器</font>
+                </h1>
 
                 <h1><i class="chapter">Chapter SIX</i><br />
-				Generics</h1>
+				Generics<br />
+<font size="2" color="blue">第六章<br />泛型</font>
+                </h1>
 
                 <p><br /></p>
 
                 <h3 style="text-align: center;"><i>Exam Objectives</i></h3>
+<p style="text-align: center;"><i><font size="2" color="blue">考点</font></i></p>
 
-                <p style="text-align: center;"><i>Create and use a generic class.</i></p>
+                <p style="text-align: center;"><i>Create and use a generic class.<br />
+<font size="2" color="blue">创建和使用泛型类。</font><br />
+                </i></p>
 
             </div>
         </div>
@@ -48,6 +53,7 @@
         <div class="column">
 
             <h2>Generics</h2>
+<font size="2" color="blue">泛型</font>
 
             <p>Without generics, you can declare a <code>List</code> like this:</p>
 
